--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,140 @@
-.App {
+body {
+  margin: 0px;
+}
+
+h1 {
+  color: blue;
+  padding-left: 1rem;
+}
+
+.form {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.todos {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+  grid-gap: 1rem;
+  padding: 1rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.todo {
+  border: 1px solid rgb(194, 220, 242);
+  padding-left: 1rem;
+  border-radius: 5px;
+  box-shadow: 1px 1px 1px rgb(131, 131, 227);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.todo h3{
+  text-transform: capitalize;
+}
+
+.todo:hover {
+  box-shadow: 1px 1px 5px rgb(19, 19, 234);
+  color: blue;
+}
+
+.add {
+  height: 10rem;
+  text-align: center;
+}
+
+.add input {
+  width: 80%;
+  height: 2rem;
+  border-radius: 8px;
+  border: 2px blue solid;
+}
+
+.add button {
+  border: none;
+  background-color: blue;
+  color: white;
+  width: 40%;
+  height: 2rem;
+  margin-top: 0.5rem;
+  border-radius: 5px;
+}
+
+.subtasks p:nth-child(even) {
+  background-color: rgb(207, 222, 254);
+}
+
+.subtasks p {
+  height: 2rem;
+  padding: 1rem;
+  font-size: large;
+  margin: 0px;
+  display: flex;
+  align-items: center;
+}
+
+.subtasks p:hover {
+  box-shadow: 1px 2px 4px blue;
+  border: 0.5px solid blue;
+}
+
+.subtasks {
+  padding: 0rem 0.5rem;
+}
+
+.subtasks input {
+  width: 1rem;
+  height: 2rem;
+}
+
+.login {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  text-align: center;
+}
+
+.login input {
+  width: 80%;
+  height: 2rem;
+  border-radius: 8px;
+  border: 2px blue solid;
+}
+
+.login button {
+  border: none;
+  background-color: blue;
   color: white;
+  width: 40%;
+  height: 2rem;
+  margin-top: 0.5rem;
+  border-radius: 5px;
 }
 
-.App-link {
-  color: #61dafb;
+.sub-task input {
+  width: 40%;
+  outline-color: blue;
+  border: 1px solid blue;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.sub-task button {
+  border: none;
+  background-color: blue;
+  color: white;
+  width: 20%;
+  height: 2rem;
+  margin-left: 0.5rem;
+  border-radius: 5px;
+}
+
+button:hover {
+  background-color: white;
+  color: blue;
+  border: 1px solid blue;
+}
+
+button {
+  font-weight: bolder;
+}
+
+.edit{
+    width: 50%;
+    display: flex;
 }
